Add tool call in JavaToXmlTranslator.java